--- a/public/ejs/login.ejs
+++ b/public/ejs/login.ejs
@@ -31,9 +31,8 @@
     <script type="text/javascript" src="assets/js/core/bootstrap.min.js"></script>
  
     <script type="text/javascript" src="assets/js/plugins/toastr/toastr.min.js"></script> 
-    <!-- Page JS Code -->
-    <!-- <script src="dist/login.js"></script> -->
+  
 
-<script type="text/javascript" src="dist/login.js?df130f370869cc901cc3"></script></body>
+</body>
 
 </html>
