--- a/public/assets/css/common.css
+++ b/public/assets/css/common.css
@@ -30,3 +30,16 @@
     line-height: 1.2;
     color: #FFF;
 }
+
+.thumbnails li img {
+    width: 100px;
+}
+
+.gridstack-item-deletebutton {
+    float: right;
+    color: #fff; 
+    background: none;
+    border: none; 
+    margin-right: -5px;
+    padding-right: -10px;
+}
