--- a/public/ejs/index.ejs
+++ b/public/ejs/index.ejs
@@ -87,11 +87,7 @@
     <script type="text/javascript" src="assets/js/plugins/bootstrap-datetimepicker/bootstrap-datetimepicker.min.js"></script>
 
     <script type="text/javascript" src="assets/js/common.js"></script>
-    <!-- <script src="assets/js/table_data.js"></script>  -->
-
-    <!-- Page JS Code -->
-    <!-- <script type="text/javascript" src="dist/index.js"></script> -->
-
-<script type="text/javascript" src="dist/index.js?df130f370869cc901cc3"></script></body>
+ 
+</body>
 
 </html>
