--- a/public/ejs/index.ejs
+++ b/public/ejs/index.ejs
@@ -1,11 +1,8 @@
 <!DOCTYPE html>
-<!--[if IE 9]>         <html class="ie9 no-focus" lang="en"> <![endif]-->
-<!--[if gt IE 9]><!-->
-<html class="no-focus" lang="en">
-<!--<![endif]-->
+<html>
 
 <head>
-    <meta charset="utf-8">
+    <meta charset="UTF-8">
 
     <title>鸿天科技 - 广告机直播系统 </title>
 
@@ -13,11 +10,11 @@
     <meta name="author" content="pixelcave">
     <meta name="robots" content="noindex, nofollow">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-
-    <!-- Icons -->
-    <!-- The following icons can be replaced with your own, they are used by desktop and mobile browsers -->
-    <link rel="shortcut icon" href="assets/img/favicons/favicon.png">
-    <!-- END Icons -->
+    <meta http-equiv="Cache-Control" content="no-store"/>  
+    <meta http-equiv="Pragma" content="no-cache"/>  
+    <meta http-equiv="Expires" content="0"/> 
+     
+    <link rel="shortcut icon" href="assets/img/favicons/favicon.png"> 
 
     <!-- <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,400italic,600,700%7COpen+Sans:300,400,400italic,600,700"> -->
 
